# Python_Mini-Projects

./: .gitignore  Pipfile  README.md  ideas.txt  mini-projs.txt
Basics/: current_time.py  gcd.py  getcalendar.py  guess_game.py  subtract_date.py
Basics1/: circle_area.py  gcd.py  histogram.py
Exercism_challenges/: README.md
Exercism_challenges/Basics/gigasecond/: gigasecond.py
Exercism_challenges/Basics/gigasecond/.exercism/: metadata.json
Exercism_challenges/Easy/gigasecond/: HELP.md
Exercism_challenges/Easy/guidos-gorgeous-lasagna/: lasagna.py
Exercism_challenges/Easy/guidos-gorgeous-lasagna/.exercism/: metadata.json
Exercism_challenges/Easy/hamming/: hamming.py
Exercism_challenges/Easy/hamming/.exercism/: metadata.json
Exercism_challenges/Easy/hello-world/.exercism/: metadata.json
Exercism_challenges/Easy/high-scores/: high_scores.py
Exercism_challenges/Easy/high-scores/.exercism/: metadata.json
Exercism_challenges/Easy/isogram/: isogram.py
Exercism_challenges/Easy/isogram/.exercism/: metadata.json
Exercism_challenges/Easy/matrix/: matrix.py
Exercism_challenges/Easy/matrix/.exercism/: metadata.json
Exercism_challenges/Easy/raindrops/: raindrops.py
Exercism_challenges/Easy/raindrops/.exercism/: metadata.json
Exercism_challenges/Easy/two-fer/.exercism/: metadata.json
Exercism_challenges/Easy/word-count/: word_count.py
Exercism_challenges/Easy/word-count/.exercism/: metadata.json
Exercism_challenges/Medium/markdown/: HELP.md  markdown.py
Exercism_challenges/Medium/markdown/.exercism/: metadata.json
Exercism_challenges/Medium/twelve-days/: twelve_days.py
Exercism_challenges/Medium/twelve-days/.exercism/: metadata.json
advent-of-code/: README.md
advent-of-code/day-one/: main.py
basic-projects/: README.md  anagrams.py  draw_circle_spirology.py  draw_stopwatch..py  draw_vibrate_circle.py  guessing_game.py  turtle_race.py
intermediate-projects/: README.md
intermediate-projects/bounce_ball/: pyproject.toml
intermediate-projects/calculator/: Calculator.py  Calculator1.py  README.md
intermediate-projects/convert_json_to_csv/: main.py
intermediate-projects/convert_json_to_csv/json_to_csv/: __init__.py
intermediate-projects/files_sorter/: extensions.py  main.py  pyproject.toml
intermediate-projects/genius_api/: main.py  pyproject.toml
intermediate-projects/genius_api/genius_api/: __init__.py  genius_within.py
intermediate-projects/image_background_remover/: Pipfile  crop.py  main.py
intermediate-projects/image_background_remover/imgs/: result.tif
intermediate-projects/image_downloder/: test.py
intermediate-projects/lightnovel_scrapper/: main.py  pyproject.toml
intermediate-projects/lightnovel_scrapper/lightnovel/: __init__.py
intermediate-projects/merge_csv_file/: pyproject.toml
intermediate-projects/merge_csv_file/data/: data_1.csv  data_2.csv  merged.csv
intermediate-projects/merge_pdf_file/: pyproject.toml
intermediate-projects/music_player/: main.py  pyproject.toml
intermediate-projects/news_updater_with_vioce/: qgis_471911b2-6fcb-43ba-b8c6-21b8f91bcc88.txt
intermediate-projects/random_password_generator/: Password locker.py
intermediate-projects/snake_game/: main.py
intermediate-projects/snap_email/: pyproject.toml
intermediate-projects/snap_email/example_1/: main.ipynb  main.py
intermediate-projects/snap_email/example_2/: main.py  test.csv
intermediate-projects/traversingCompu/: README.md  main.py  results.xlsx  traverse.xlsx
intermediate-projects/website_screenshot/: main.py  pyproject.toml
