[tool.poetry]
name = "files-sorter"
version = "0.1.0"
description = ""
authors = ["sadatyussuf <tommyleespartan0@gmail.com>"]
readme = "README.md"
packages = [{include = "files_sorter"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.6.0"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
